fix java 11 deprecations
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>